<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_modificar"
            android:layout_width="234dp"
            android:layout_height="86dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_titulo_modificar"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nombre_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_nombres"
            app:layout_constraintEnd_toStartOf="@+id/et_nombre_mod"
            app:layout_constraintTop_toBottomOf="@+id/txt_modificar" />

        <TextView
            android:id="@+id/tv_primerap_mod"
            android:layout_width="71dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/tv_primerap"
            app:layout_constraintEnd_toStartOf="@+id/et_primerap_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre_mod" />

        <TextView
            android:id="@+id/tv_segundoap_mod"
            android:layout_width="76dp"
            android:layout_height="34dp"
            android:text="@string/tv_seguncdoap"
            app:layout_constraintEnd_toStartOf="@+id/et_segundoap_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_primerap_mod" />

        <TextView
            android:id="@+id/tv_direccion_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_direccion"
            app:layout_constraintEnd_toStartOf="@+id/et_direccion_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_segundoap_mod" />

        <TextView
            android:id="@+id/tv_fechanac_mod"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:text="@string/tv_fechanac"
            app:layout_constraintEnd_toStartOf="@+id/et_fechanac_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_direccion_mod" />

        <TextView
            android:id="@+id/tv_tel_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_telefono"
            app:layout_constraintEnd_toStartOf="@+id/et_tel_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_fechanac_mod" />

        <TextView
            android:id="@+id/tv_email_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_email"
            app:layout_constraintEnd_toStartOf="@+id/et_email_mod"
            app:layout_constraintTop_toBottomOf="@+id/tv_tel_mod" />

        <EditText
            android:id="@+id/et_nombre_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="33dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            android:overScrollMode="always"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_modificar" />

        <EditText
            android:id="@+id/et_primerap_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="33dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_mod" />

        <EditText
            android:id="@+id/et_segundoap_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="35dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_primerap_mod" />

        <EditText
            android:id="@+id/et_direccion_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_segundoap_mod" />

        <EditText
            android:id="@+id/et_fechanac_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_direccion_mod" />

        <EditText
            android:id="@+id/et_tel_mod"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="38dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_fechanac_mod" />

        <EditText
            android:id="@+id/et_email_mod"
            android:layout_width="186dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="38dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_tel_mod" />

        <Button
            android:id="@+id/btn_cancelar_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="107dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_mod" />

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="102dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="Modificar"
            android:text="@string/btnModifica"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancelar_mod"
            app:layout_constraintTop_toBottomOf="@+id/et_email_mod" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>