<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/txt_titulo_buscar"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_nombre_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="91dp"
            android:text="@string/tv_nombres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_nombre_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/txt_nombre_buscar"
            app:layout_constraintTop_toBottomOf="@+id/txt_buscar" />

        <Button
            android:id="@+id/btn_cancelar_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="104dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_buscar" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="104dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="listViewClientes"
            android:text="@string/btnConsultar"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancelar_buscar"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_buscar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>