<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="56dp"
            android:text="@string/txt_titulo_eliminar"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/et_nombre_bajas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="33dp"
            android:text="@string/tv_nombres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_eliminar" />

        <EditText
            android:id="@+id/et_nombre_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/et_nombre_bajas"
            app:layout_constraintTop_toBottomOf="@+id/txt_eliminar" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="102dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="Eliminar"
            android:text="@string/btn_aceptar_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancelar_bajas"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_eliminar" />

        <Button
            android:id="@+id/btn_cancelar_bajas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="102dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_eliminar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>